kustomize/base/redis-replica-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-replica
spec:
  serviceName: redis-replica
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: replica
  template:
    metadata:
      labels:
        app: redis
        role: replica
    spec:
      containers:
        - name: redis
          image: redis:7
          command:
            - sh
            - -c
            - |
              redis-server /config/redis.conf --replicaof redis-master 6379
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-conf
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: redis-conf
          configMap:
            name: redis-config
            items:
              - key: redis.conf
                path: redis.conf
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-gp3
        resources:
          requests:
            storage: 10Gi
