kustomize/base/redis-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
spec:
  clusterIP: None
  selector:
    app: redis
    role: master
  ports:
    - port: 6379
      name: redis

---
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
spec:
  clusterIP: None
  selector:
    app: redis
    role: replica
  ports:
    - port: 6379
      name: redis

---
apiVersion: v1
kind: Service
metadata:
  name: redis-sentinel
spec:
  clusterIP: None
  selector:
    app: redis
    role: sentinel
  ports:
    - port: 26379
      name: sentinel
